@@ -2,6 +2,7 @@ package org.jabref.logic.importer.fetcher;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
@@ -72,7 +73,7 @@ public class SemanticScholar implements FulltextFetcher, PagedSearchBasedParserF
         if (doi.isPresent()) {
             try {
                 // Retrieve PDF link
-                String source = SOURCE_ID_SEARCH + doi.get().getDOI();
+                String source = SOURCE_ID_SEARCH + doi.get().asString();
                 var jsoupRequest = Jsoup.connect(getURLBySource(source))
                                         .userAgent(URLDownload.USER_AGENT)
                                         .header("Accept", "text/html; charset=utf-8")
@@ -114,7 +115,7 @@ public class SemanticScholar implements FulltextFetcher, PagedSearchBasedParserF
             return Optional.empty();
         }
         LOGGER.info("Fulltext PDF found @ SemanticScholar. Link: {}", link);
-        return Optional.of(new URL(link));
+        return Optional.of(URI.create(link).toURL());
     }
 
     @Override
