@@ -15,6 +15,7 @@ import java.net.CookiePolicy;
 import java.net.HttpCookie;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
@@ -23,28 +24,28 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
+import java.security.KeyManagementException;
+import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
-import java.security.cert.X509Certificate;
 import java.time.Duration;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Optional;
 
-import javax.net.ssl.HostnameVerifier;
 import javax.net.ssl.HttpsURLConnection;
 import javax.net.ssl.SSLContext;
-import javax.net.ssl.SSLSocketFactory;
-import javax.net.ssl.TrustManager;
-import javax.net.ssl.X509TrustManager;
 
 import org.jabref.http.dto.SimpleHttpResponse;
 import org.jabref.logic.importer.FetcherClientException;
 import org.jabref.logic.importer.FetcherException;
 import org.jabref.logic.importer.FetcherServerException;
 import org.jabref.logic.util.io.FileUtil;
+import org.jabref.model.strings.StringUtil;
 
+import kong.unirest.core.HttpResponse;
 import kong.unirest.core.Unirest;
 import kong.unirest.core.UnirestException;
 import org.slf4j.Logger;
@@ -66,21 +67,30 @@ import org.slf4j.LoggerFactory;
  */
 public class URLDownload {
 
-    public static final String USER_AGENT = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/108.0.0.0 Safari/537.36";
+    public static final String USER_AGENT = "Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:130.0) Gecko/20100101 Firefox/130.0";
     private static final Logger LOGGER = LoggerFactory.getLogger(URLDownload.class);
     private static final Duration DEFAULT_CONNECT_TIMEOUT = Duration.ofSeconds(30);
+    private static final int MAX_RETRIES = 3;
 
     private final URL source;
     private final Map<String, String> parameters = new HashMap<>();
     private String postData = "";
     private Duration connectTimeout = DEFAULT_CONNECT_TIMEOUT;
+    private SSLContext sslContext;
+
+    static {
+        Unirest.config()
+               .followRedirects(true)
+               .enableCookieManagement(true)
+               .setDefaultHeader("User-Agent", USER_AGENT);
+    }
 
     /**
      * @param source the URL to download from
      * @throws MalformedURLException if no protocol is specified in the source, or an unknown protocol is found
      */
     public URLDownload(String source) throws MalformedURLException {
-        this(new URL(source));
+        this(URI.create(source).toURL());
     }
 
     /**
@@ -89,66 +99,14 @@ public class URLDownload {
     public URLDownload(URL source) {
         this.source = source;
         this.addHeader("User-Agent", URLDownload.USER_AGENT);
-    }
-
-    /**
-     * Older java VMs does not automatically trust the zbMATH certificate. In this case the following exception is
-     * thrown: sun.security.validator.ValidatorException: PKIX path building failed:
-     * sun.security.provider.certpath.SunCertPathBuilderException: unable to find valid certification path to requested
-     * target JM > 8u101 may trust the certificate by default according to http://stackoverflow.com/a/34111150/873661
-     * <p>
-     * We will fix this issue by accepting all (!) certificates. This is ugly; but as JabRef does not rely on
-     * security-relevant information this is kind of OK (no, actually it is not...).
-     * <p>
-     * Taken from http://stackoverflow.com/a/6055903/873661 and https://stackoverflow.com/a/19542614/873661
-     *
-     * @deprecated
-     */
-    @Deprecated
-    public static void bypassSSLVerification() {
-        LOGGER.warn("Fix SSL exceptions by accepting ALL certificates");
-
-        // Create a trust manager that does not validate certificate chains
-        TrustManager[] trustAllCerts = {new X509TrustManager() {
-            @Override
-            public void checkClientTrusted(X509Certificate[] chain, String authType) {
-            }
-
-            @Override
-            public void checkServerTrusted(X509Certificate[] chain, String authType) {
-            }
-
-            @Override
-            public X509Certificate[] getAcceptedIssuers() {
-                return new X509Certificate[0];
-            }
-        }};
 
         try {
-            // Install all-trusting trust manager
-            SSLContext context = SSLContext.getInstance("TLS");
-            context.init(null, trustAllCerts, new SecureRandom());
-            HttpsURLConnection.setDefaultSSLSocketFactory(context.getSocketFactory());
-
-            // Install all-trusting host verifier
-            HostnameVerifier allHostsValid = (hostname, session) -> true;
-            HttpsURLConnection.setDefaultHostnameVerifier(allHostsValid);
-        } catch (
-                Exception e) {
-            LOGGER.error("A problem occurred when bypassing SSL verification", e);
-        }
-    }
-
-    /**
-     * @param socketFactory trust manager
-     * @param verifier      host verifier
-     */
-    public static void setSSLVerification(SSLSocketFactory socketFactory, HostnameVerifier verifier) {
-        try {
-            HttpsURLConnection.setDefaultSSLSocketFactory(socketFactory);
-            HttpsURLConnection.setDefaultHostnameVerifier(verifier);
-        } catch (Exception e) {
-            LOGGER.error("A problem occurred when reset SSL verification", e);
+            sslContext = SSLContext.getInstance("TLSv1.2");
+            sslContext.init(null, null, new SecureRandom());
+            // Note: SSL certificates are installed at {@link TrustStoreManager#configureTrustStore(Path)}
+        } catch (NoSuchAlgorithmException | KeyManagementException e) {
+            LOGGER.error("Could not initialize SSL context", e);
+            sslContext = null;
         }
     }
 
@@ -156,15 +114,28 @@ public class URLDownload {
         return source;
     }
 
-    public String getMimeType() {
-        Unirest.config().setDefaultHeader("User-Agent", "Mozilla/5.0 (Windows; U; WindowsNT 5.1; en-US; rv1.8.1.6) Gecko/20070725 Firefox/2.0.0.6");
-
+    public Optional<String> getMimeType() {
         String contentType;
+
+        int retries = 0;
         // Try to use HEAD request to avoid downloading the whole file
         try {
-            contentType = Unirest.head(source.toString()).asString().getHeaders().get("Content-Type").getFirst();
+            String urlToCheck = source.toString();
+            String locationHeader;
+            do {
+                retries++;
+                HttpResponse<String> response = Unirest.head(urlToCheck).asString();
+                // Check if we have redirects, e.g. arxiv will give otherwise content type html for the original url
+                // We need to do it "manually", because ".followRedirects(true)" only works for GET not for HEAD
+                locationHeader = response.getHeaders().getFirst("location");
+                if (!StringUtil.isNullOrEmpty(locationHeader)) {
+                    urlToCheck = locationHeader;
+                }
+                // while loop, because there could be multiple redirects
+            } while (!StringUtil.isNullOrEmpty(locationHeader) && retries <= MAX_RETRIES);
+            contentType = Unirest.head(urlToCheck).asString().getHeaders().getFirst("Content-Type");
             if ((contentType != null) && !contentType.isEmpty()) {
-                return contentType;
+                return Optional.of(contentType);
             }
         } catch (Exception e) {
             LOGGER.debug("Error getting MIME type of URL via HEAD request", e);
@@ -173,8 +144,8 @@ public class URLDownload {
         // Use GET request as alternative if no HEAD request is available
         try {
             contentType = Unirest.get(source.toString()).asString().getHeaders().get("Content-Type").getFirst();
-            if ((contentType != null) && !contentType.isEmpty()) {
-                return contentType;
+            if (!StringUtil.isNullOrEmpty(contentType)) {
+                return Optional.of(contentType);
             }
         } catch (Exception e) {
             LOGGER.debug("Error getting MIME type of URL via GET request", e);
@@ -182,17 +153,16 @@ public class URLDownload {
 
         // Try to resolve local URIs
         try {
-            URLConnection connection = new URL(source.toString()).openConnection();
-
+            URLConnection connection = URI.create(source.toString()).toURL().openConnection();
             contentType = connection.getContentType();
-            if ((contentType != null) && !contentType.isEmpty()) {
-                return contentType;
+            if (!StringUtil.isNullOrEmpty(contentType)) {
+                return Optional.of(contentType);
             }
         } catch (IOException e) {
             LOGGER.debug("Error trying to get MIME type of local URI", e);
         }
 
-        return "";
+        return Optional.empty();
     }
 
     /**
@@ -202,24 +172,13 @@ public class URLDownload {
      * @return the status code of the response
      */
     public boolean canBeReached() throws UnirestException {
-        // new unirest version does not support apache http client any longer
-        Unirest.config().reset()
-               .followRedirects(true)
-               .enableCookieManagement(true)
-               .setDefaultHeader("User-Agent", USER_AGENT);
 
         int statusCode = Unirest.head(source.toString()).asString().getStatus();
         return (statusCode >= 200) && (statusCode < 300);
     }
 
     public boolean isMimeType(String type) {
-        String mime = getMimeType();
-
-        if (mime.isEmpty()) {
-            return false;
-        }
-
-        return mime.startsWith(type);
+        return getMimeType().map(mimeType -> mimeType.startsWith(type)).orElse(false);
     }
 
     public boolean isPdf() {
@@ -386,7 +345,7 @@ public class URLDownload {
     /**
      * Open a connection to this object's URL (with specified settings).
      * <p>
-     * If accessing an HTTP URL, remeber to close the resulting connection after usage.
+     * If accessing an HTTP URL, remember to close the resulting connection after usage.
      *
      * @return an open connection
      */
@@ -409,12 +368,14 @@ public class URLDownload {
             }
 
             if ((status == HttpURLConnection.HTTP_MOVED_TEMP)
-                    || (status == HttpURLConnection.HTTP_MOVED_PERM)
-                    || (status == HttpURLConnection.HTTP_SEE_OTHER)) {
+                || (status == HttpURLConnection.HTTP_MOVED_PERM)
+                || (status == HttpURLConnection.HTTP_SEE_OTHER)) {
                 // get redirect url from "location" header field
                 String newUrl = connection.getHeaderField("location");
                 // open the new connection again
                 try {
+                    httpURLConnection.disconnect();
+                    // multiple redirects are implemented by this recursion
                     connection = new URLDownload(newUrl).openConnection();
                 } catch (MalformedURLException e) {
                     throw new FetcherException("Could not open URL Download", e);
@@ -422,10 +383,10 @@ public class URLDownload {
             } else if (status >= 400) {
                 // in case of an error, propagate the error message
                 SimpleHttpResponse httpResponse = new SimpleHttpResponse(httpURLConnection);
-                LOGGER.info("{}", httpResponse);
-                if ((status >= 400) && (status < 500)) {
+                LOGGER.info("{}: {}", FetcherException.getRedactedUrl(this.source), httpResponse);
+                if (status < 500) {
                     throw new FetcherClientException(this.source, httpResponse);
-                } else if (status >= 500) {
+                } else {
                     throw new FetcherServerException(this.source, httpResponse);
                 }
             }
@@ -435,6 +396,15 @@ public class URLDownload {
 
     private URLConnection getUrlConnection() throws IOException {
         URLConnection connection = this.source.openConnection();
+
+        if (connection instanceof HttpURLConnection httpConnection) {
+            httpConnection.setInstanceFollowRedirects(true);
+        }
+
+        if ((sslContext != null) && (connection instanceof HttpsURLConnection httpsConnection)) {
+            httpsConnection.setSSLSocketFactory(sslContext.getSocketFactory());
+        }
+
         connection.setConnectTimeout((int) connectTimeout.toMillis());
         for (Entry<String, String> entry : this.parameters.entrySet()) {
             connection.setRequestProperty(entry.getKey(), entry.getValue());
