@@ -2,6 +2,7 @@ package org.jabref.logic.help;
 
 import java.io.IOException;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.Arrays;
 import java.util.stream.Stream;
@@ -24,7 +25,7 @@ class HelpFileTest {
     @ParameterizedTest
     @MethodSource("getAllHelpFiles")
     void referToValidPage(HelpFile help) throws IOException {
-        URL url = new URL(jabrefHelp + help.getPageName());
+        URL url = URI.create(jabrefHelp + help.getPageName()).toURL();
         HttpURLConnection http = (HttpURLConnection) url.openConnection();
         http.setRequestProperty("User-Agent", URLDownload.USER_AGENT);
         assertEquals(200, http.getResponseCode(), "Wrong URL: " + url.toString());
